# dev-agent

./: .env.example  .gitignore  CHANGELOG.md  README.md  ROADMAP.md  config.example.yaml  pyproject.toml  test_dummy.txt
knowledge/patterns/: nextjs-api-route.md  react-component.md
knowledge/personas/: diego.md
knowledge/rules/: _base.md  neo4j.md  nextjs.md  prisma.md  python.md  react.md  tailwind.md  testing.md  typescript.md
prompts/: add_new_rule.md  add_status_command.md  create-dummy-file.md  implement-enhanced-history.md  update-agent-history-focused.md
scripts/: list_models.py
src/devagent/: __init__.py  agent.py  cli.py  config.py  context.py  file_ops.py  git_ops.py  knowledge.py
